# audiox

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json  vite.config.ts
docs/: roadmap.md  spec.md
docs/samples/: sample__rust_ownership_borrowing_note.md  sample__solidjs_reactivity_note.md  sample__tauri_architecture_note.md  sample__vector_databases_note.md
docs/specs/: README.md  architecture.md  data-model.md  embeddings.md  ffmpeg.md  frontend.md  ollama.md  preflight.md  text-import.md  whisper.md  yt-dlp.md
scripts/: json-to-textmate.py
src/: App.test.tsx  App.tsx  devices.ts  errors.ts  format-utils.ts  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  commands.rs  embedding.rs  lib.rs  main.rs  markdown.rs  models.rs  parsers.rs  storage.rs
src-tauri/src/themes/: everforest-dark.tmTheme  kanagawa-dragon.tmTheme  kanagawa-wave.tmTheme  rose-pine-moon.tmTheme  rose-pine.tmTheme  tokyo-night.tmTheme  vitesse-black.tmTheme  vitesse-dark.tmTheme
src/components/: Accordion.test.tsx  Accordion.tsx  Markdown.test.tsx  Markdown.tsx  StatusBar.test.tsx  StatusBar.tsx
src/state/: AppContext.tsx
src/test/: setup.ts
src/views/: DocumentView.tsx  ImportView.test.tsx  ImportView.tsx  LibraryView.tsx  RecordView.tsx  SettingsView.tsx  SetupView.tsx  SplashView.tsx  ViewScaffold.tsx
